# chrono-flex

./: ANCF.cu  ANCFConstraints.cu  ANCFContact.cu  ANCFSystem.cu  ANCFSystem.cuh  ANCFintForce.cu  CMakeLists.txt  Element.cuh  README.md  include.cuh  main.cu
models/: CMakeLists.txt  main.cu  main_multiGPU.cu
src/: ANCFSystem.cu  ANCFSystem.cuh  ANCFintForce.cu
